--- a/base.html
+++ b/base.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <h1>kalkot</h1>
-        <h3>tes Kalkulator Kotak</h3>
+        <h3>Kalkulator Kotak</h3>
     </header>
-    <section id="inputsatu">
+    <section class="inputsatu">
         <label for="inputfield">Sisi Persegi</label>
-        <input type="number" id="inputfield">
+        <input type="number" id="inputfield" placeholder="Masukan">
     </section>
 
 </body>
