--- a/base.html
+++ b/base.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>kalkot</h1>
-        <h3>Kalkulator Kotak</h3>
+        <h4 class="kk">(Kalkulator Kotak)</h4>
     </header>
     <section class="inputsatu">
         <label for="inputfield">Sisi Persegi</label>
