menambahkan css pada button

--- a/base.html
+++ b/base.html
@@ -17,8 +17,8 @@
         <input type="number" id="inputfield" placeholder="Masukan">
     </section>
     <section class="buttonhitung">
-        <button>Hitung Luas</button>
-        <button>Hitung Keliling</button>
+        <button id="Luas">Hitung Luas</button>
+        <button id="Keliling">Hitung Keliling</button>
     </section>
 </body>
 </html>
