menambahkan footer dan merapihkan warna mengconnect javascript

--- a/base.html
+++ b/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkot</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js" defer></script>
 </head>
 <body>
     <header>
@@ -21,4 +22,8 @@
         <button id="Keliling">Hitung Keliling</button>
     </section>
 </body>
+
+<footer>
+    <h6>Dibuat oleh Muhammad Daffa Abdul Mufid</h6>
+</footer>
 </html>
