--- a/base.html
+++ b/base.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkot</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
 </head>
 <body>
     <header>
@@ -21,9 +20,10 @@
         <button id="Luas">Hitung Luas</button>
         <button id="Keliling">Hitung Keliling</button>
     </section>
+    <script src="js/script.js"></script>
 </body>
 
 <footer>
     <h6>Dibuat oleh Muhammad Daffa Abdul Mufid</h6>
 </footer>
-</html>
+</html>     
