--- a/base.html
+++ b/base.html
@@ -19,6 +19,16 @@
         <button id="Luas" onclick="ht_luas()">Hitung Luas</button>
         <button id="Keliling" onclick="ht_keliling()">Hitung Keliling</button>
         <div id="hasil"></div>
+
+        <div id="hasil"></div>
+        
+    </section>
+
+    <section style="justify-content: center; display: flex; margin-top: 1rem;">
+        <div class="wrap">
+            <button id="Luas1" onclick="ht_luas()">Hasil Luas</button>
+            <button id="Keliling1" onclick="ht_keliling()">Hasil Keliling</button>
+        </div>
     </section>
     <script src="js/script.js"></script>
 </body>
