--- a/base.html
+++ b/base.html
@@ -18,8 +18,10 @@
     <section class="buttonhitung">
         <button id="Luas" onclick="ht_luas()">Hitung Luas</button>
         <button id="Keliling" onclick="ht_keliling()">Hitung Keliling</button>
-        <div id="hasil"></div>
     </section>
+    <div>
+    <h2 id="hasil"></h2>
+    </div>
     <script src="js/script.js"></script>
 </body>
 
